--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,7 @@ jwt:
 zap:
   level: info
   format: console
-  prefix: "[github.com/flipped-aurora/gin-vue-admin/server]"
+  prefix: "[]"
   director: log
   show-line: true
   encode-level: LowercaseColorLevelEncoder
